# desktop

./: .editorconfig  .eslintignore  .git-blame-ignore-revs  .git-blame-ignore-revs.txt  .gitignore  .gitmodules  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  SECURITY.md  appveyor.yml  appveyor.yml.flagged-to-remove  azure-pipelines.yml  binding.gyp  bitwarden-browser.sln  bitwarden-desktop.sln  ci-build.cmd  ci-dist-source.ps1  crowdin.yml  electron-builder.json  electron-builder.yml  gulpfile.js  id_rsa_downcloud_cozy_pass_web.enc  id_rsa_downcloud_passwords.enc  installer.nsh  jslib.ts  karma.conf.js  manifest.webapp  package-lock.json  package.json  server.js  sign.js  tsconfig-browser.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  tslint.json  (+11 more)
.az-pipelines/: az-cli-tests.yml  sign-windows-artifacts.yml  test-ast-install.yml  windows-build-sign.yml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template
.github/ISSUE_TEMPLATE/: bug.yml
.github/scripts/: load-version.ps1
.github/secrets/: appstore-app-cert.p12.gpg  appstore-installer-cert.p12.gpg  bitwarden-deskop-key.p12.gpg  bitwarden-desktop-key.p12.gpg  bitwarden_desktop_appstore.provisionprofile.gpg  bitwarden_safari_appstore.provisionprofile.gpg  devid-app-cert.p12.gpg  devid-installer-cert.p12.gpg  macdev-cert.p12.gpg
.github/workflows/: build-and-sign.yml  build.yml  (+6 more)
.husky/: pre-commit
desktop_native/: .gitignore  Cargo.toml  README.md  build.js  index.d.ts  index.js  package-lock.json  package.json
desktop_native/.cargo/: config
desktop_native/src/: lib.rs  main.rs
desktop_native/src/biometric/: mod.rs  unix.rs  win.rs  windows.rs
desktop_native/src/biometric/mac/: ffi.rs  mod.rs
desktop_native/src/password/: macos.rs  unix.rs  windows.rs
docs/: README.md  project_architecture.md  react_components.md
patches/: app-builder-lib+22.10.5.patch
proxy/: app.ts  global.d.ts  ipc.ts  nativemessage.ts  tsconfig.json
resources/: dmg.icns  entitlements.mas.plist  icon.icns  native-messaging.bat
scripts/: after-sign.js  build-safari-appex.ps1  cask-update.ps1  cask-update.sh  choco-pack.ps1  choco-update.ps1  chrome.json  cloc.ps1  download-legacy-safari.ps1  notarize.js  safari-build.ps1  snap-release.ps1  snap-update.ps1  start-artifact.js
src/: Info.plist  action_popup.html  autofillContent.js  background.d.ts  background.html  background.js  background.ts  content.js  desktopConstants.ts  entry.ts  formDataContent.js  global.d.ts  globals.d.ts  gulpfile.js  hotwindow.html  index.html  main.ts  manifest.json  package-lock.json  package.json
workflows/: build.yml
(+1129 files in other folders)
