[package]
name = "desktop_native"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"
napi = { version = "2", features=["async"] }
napi-derive = "2"

[build-dependencies]
napi-build = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Foundation",
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_System_WinRT",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
security-framework = "2.6.1"
security-framework-sys = "2.6.1"
